# kicad-parts-placer

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  kicad_parts_placer.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
documents/: design.md
example/example-placement/: .gitignore  Makefile  centroid-all-pos.csv  example-placement.kicad_pcb  example-placement.kicad_prl  example-placement.kicad_pro  example-placement.kicad_sch  example-placement_placed-all-pos.csv  example-placement_placed.kicad_pcb
kicad_parts_placer/: __init__.py  cli.py  kicad_parts_placer.py
src/kicad_parts_placer/: __init__.py  cli.py  dataframe_lite_.py  file_io.py  kicad_parts_placer.py
tests/: __init__.py  test_file_io.py  test_kicad_parts_placer.py
